# Penugasan2-Kelompok-1-RSI-B

./: .env  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1255473712b9_add_log_table.py  2a828b531de3_create_all_tables.py  543d99b874b9_add_event_and_registration.py  a70c80d5ed84_add_log_table.py  c04d34228fe8_add_event_and_registration.py
app/: main.py
app/controllers/: account_controller.py  event_controller.py  registration_controller.py  role_controller.py  user_controller.py
app/models/: __init__.py  account.py  event.py  log.py  registration.py  role.py  user.py
app/repositories/: account_repository.py  event_repository.py  registration_repository.py  role_repository.py  user_repository.py
app/schemas/: account.py  event.py  registration.py  role.py  user.py
app/services/: account_service.py  event_service.py  registration_service.py  role_service.py  user_service.py
